[package]
name = "pea2pea"
version = "0.53.0"
authors = ["ljedrz <ljedrz@gmail.com>"]
edition = "2024"
description = "A lightweight, performant microkernel for TCP peer-to-peer (P2P) networking. Handles connection pooling and framing, leaving the logic to you."
license = "CC0-1.0"
repository = "https://github.com/ljedrz/pea2pea"
homepage = "https://github.com/ljedrz/pea2pea"
documentation = "https://docs.rs/pea2pea"
readme = "README.md"
categories = ["network-programming", "asynchronous"]
keywords = ["p2p", "networking", "tcp", "tokio", "distributed"]
rust-version = "1.85"
exclude = [
    ".github",
    ".gitignore",
    ".tokeignore",
    "assets",
    "examples",
    "tests"
]

[lib]
crate-type = ["lib"]

[features]
test = []

[dependencies]
bytes = "1"
futures-util = { version = "0.3", features = ["sink"] }
parking_lot = "0.12"
tokio = { version = "1.24", features = ["io-util", "macros", "net", "parking_lot", "rt", "sync", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = { version = "0.1", default-features = false }

[dev-dependencies]
bincode = "2"
deadline = "0.2"
libp2p = { version = "0.56", default-features = false, features = ["macros", "noise", "ping", "tcp", "tokio", "yamux"] }
native-tls = "0.2"
peak_alloc = "0.3"
prost = "0.14"
rand = { version = "0.9", default-features = false, features = ["small_rng"] }
snow = "0.10"
test-cert-gen = "0.9"
tokio = { version = "1.24", features = ["rt-multi-thread"] }
tokio-native-tls = "0.3"
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "env-filter", "fmt", "parking_lot", "smallvec"] }
unsigned-varint = { version = "0.8", features = ["codec", "futures"] }
pea2pea = { path = ".", features = ["test"] } # a workaround to use the `test` feature in tests by default
