[workspace]
resolver = "3"
members = [ "pea2pea", "examples", "benches" ]

[workspace.dependencies]
bytes = "1.11.1"
parking_lot = "0.12"
futures-util = { version = "0.3", features = ["sink"] }
tokio = { version = "1.24", features = ["io-util", "macros", "net", "parking_lot", "rt", "sync", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = { version = "0.1", default-features = false }

[profile.chaos]
inherits = "release"
debug-assertions = true
overflow-checks = true
