[package]
name = "benches"
version = "0.0.0"
publish = false
edition = "2024"
license = "CC0-1.0 OR MIT"

[[bench]]
name = "bucket_brigade"
harness = false

[[bench]]
name = "connections"
harness = false

[[bench]]
name = "overhead"
harness = false

[[bench]]
name = "packet_cannon"
harness = false

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "startup"
harness = false

[[bench]]
name = "shutdown"
harness = false

[dev-dependencies]
bytes = { workspace = true }
futures-util = { workspace = true }
pea2pea = { workspace = true, features = ["test"] }
test-utils = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread" ] }
tokio-util = { workspace = true }

divan = "0.1"
