[package]
name = "test-utils"
version = "0.0.0"
publish = false
edition = "2024"
license = "CC0-1.0 OR MIT"

[dependencies]
bytes = { workspace = true }
parking_lot = { workspace = true }
pea2pea = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
