[package]
name = "tests"
version = "0.0.0"
publish = false
edition = "2024"
license = "CC0-1.0 OR MIT"

[dev-dependencies]
bytes = { workspace = true }
futures-util = { workspace = true }
heapster = { workspace = true }
parking_lot = { workspace = true }
pea2pea = { workspace = true, features = ["test"] }
rand = { workspace = true }
test-utils = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "signal" ] }
tokio-util = { workspace = true }
tracing = { workspace = true }
